# wasm-nginx-module

./: .editorconfig  .gitattributes  .gitignore  .licenserc.yaml  .luacheckrc  LICENSE  Makefile  README.md  build.sh  config  gen_wasm_host_api.py  go.mod  go.sum  install-wasmedge.sh  install-wasmtime.sh  proxy_wasm_abi.md
.github/workflows/: codeql-analysis.yml  license-checker.yml  lint.yml  test.yml
lib/resty/: proxy-wasm.lua  wasm.lua
src/http/: ngx_http_wasm_api.c  ngx_http_wasm_api.h  ngx_http_wasm_api_def.h  ngx_http_wasm_api_wasmedge.h  ngx_http_wasm_api_wasmtime.h  ngx_http_wasm_call.c  ngx_http_wasm_call.h  ngx_http_wasm_ctx.h  ngx_http_wasm_map.c  ngx_http_wasm_map.h  ngx_http_wasm_module.c  ngx_http_wasm_module.h  ngx_http_wasm_state.c  ngx_http_wasm_state.h  ngx_http_wasm_types.h
src/proxy_wasm/: proxy_wasm_map.c  proxy_wasm_map.h  proxy_wasm_memory.c  proxy_wasm_memory.h  proxy_wasm_types.h
src/vm/: vm.c  vm.h  wasmedge.c  wasmtime.c
t/: WASM.pm  assemblyscript.t  http_call.t  http_call_callback.t  http_call_multi.t  http_header.t  http_lifecycle.t  http_req_body.t  http_req_header.t  http_resp_body.t  http_resp_header.t  http_send_response.t  hup.t  log.t  metric.t  plugin_lifecycle.t  property.t  rust.t
t/rust/: fault-injection.t  http-call.t
t/testdata/: README.md
t/testdata/assemblyscript/: index.js  package-lock.json  package.json
t/testdata/rust/: Cargo.toml  fault_injection.rs
t/testdata/rust/fault-injection/: Cargo.toml  fault_injection.rs
t/testdata/rust/http-call/: Cargo.toml  http_call.rs
utils/: check-test-code-style.sh
(+12 files in other folders)
